--- a/clients/web/css/home.css
+++ b/clients/web/css/home.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body
-{
+body {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 
     background-color: #0f0f0f;
@@ -10,8 +9,7 @@ body
     overflow-x: hidden;
 }
 
-#grid-container
-{
+#grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
 
@@ -22,8 +20,7 @@ body
     transform: translateX(-50%);
 }
 
-.panel
-{
+.panel {
     width: 400px;
 
     background-color: #1b1f1a;
@@ -37,45 +34,38 @@ body
     margin-bottom: 20px;
 }
 
-.panel > div
-{
+.panel>div {
     padding-left: 20px;
     padding-right: 20px;
 }
 
-.panel > div:nth-of-type(1)
-{
+.panel>div:nth-of-type(1) {
     height: 66px;
     padding-left: 22px;
     display: flex;
     justify-content: space-between;
 }
 
-.panel > div:nth-of-type(1) > *
-{
+.panel>div:nth-of-type(1)>* {
     display: inline-block;
 }
 
-.panel > div:nth-of-type(2)
-{
+.panel>div:nth-of-type(2) {
     padding-bottom: 20px;
 }
 
-.panel > hr
-{
+.panel>hr {
     margin-top: 0;
 
     border-color: #30362e;
     border-style: solid;
 }
 
-.info-table tr
-{
+.info-table tr {
     background-color: #30362e;
 }
 
-.info-table td:nth-of-type(1)
-{                
+.info-table td:nth-of-type(1) {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
@@ -84,10 +74,9 @@ body
     border-bottom-left-radius: 10px;
 }
 
-.info-table td:nth-of-type(2)
-{
+.info-table td:nth-of-type(2) {
     text-align: right;
-    
+
     padding-left: 0;
     padding-right: 20px;
 
@@ -95,8 +84,7 @@ body
     border-bottom-right-radius: 10px;
 }
 
-.info-table
-{
+.info-table {
     border-spacing: 0 20px;
 
     width: 100%;
@@ -104,13 +92,11 @@ body
 
 
 
-.info-container > div
-{
+.info-container>div {
     margin-top: 20px;
 }
 
-.info-container > .two-column-text
-{
+.info-container>.two-column-text {
     background-color: #30362e;
     padding-left: 20px;
     padding-right: 20px;
@@ -120,19 +106,16 @@ body
     justify-content: space-between;
 }
 
-.info-container > .two-column-text > *
-{
+.info-container>.two-column-text>* {
     display: inline-block;
 }
 
-.info-container > .three-column-status
-{
+.info-container>.three-column-status {
     display: flex;
     justify-content: space-between;
 }
 
-.info-container > .three-column-status > div
-{
+.info-container>.three-column-status>div {
     display: inline-block;
 
     width: 106px;
@@ -141,8 +124,7 @@ body
     border-radius: 10px;
 }
 
-.info-container > .three-column-status > div > img
-{
+.info-container>.three-column-status>div>img {
     position: relative;
 
     top: 50%;
@@ -154,38 +136,31 @@ body
 
 
 
-.status.green
-{
+.status.green {
     background-color: #70ff70;
 }
 
-.status.yellow
-{
+.status.yellow {
     background-color: #fffc4a;
 }
 
-.status.red
-{
+.status.red {
     background-color: #ff2c2c;
 }
 
-.status.semi-green
-{
+.status.semi-green {
     background-color: #60cd60;
 }
 
-.status.semi-yellow
-{
+.status.semi-yellow {
     background-color: #cccb46;
 }
 
-.status.semi-red
-{
+.status.semi-red {
     background-color: #cc302e;
 }
 
-.status.small
-{
+.status.small {
     width: 10px;
     height: 10px;
 
