--- a/clients/web/css/home.css
+++ b/clients/web/css/home.css
@@ -168,3 +168,31 @@ body {
 
     border-radius: 100%;
 }
+
+
+
+#profile {
+    width: 48px;
+    height: 48px;
+
+    border-radius: 100%;
+
+    margin-top: 20px;
+    margin-left: calc(100% - 58px);
+    margin-bottom: 20px;
+
+    transition-duration: 0.2s;
+}
+
+#profile:hover {
+    background-color: #6b6b6b;
+}
+
+#profile > img {
+    width: 40px;
+    width: 40px;
+
+    border-radius: 100%;
+    margin: 4px;
+
+}
